refactor : 공정성 향상 및 요구사항 기반 리팩토링